Implementacion del procesamiento de video en segundo plano utilizando openai con azure

--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@ RABBITMQ_HOST="amqp://guest:guest@rabbitmq:5672"
 OTEL_ENDPOINT="http://aspire-dashboard:18889"
 REDIS_URL="redis-stack"
 AZURE_STORAGE_CONNECTION_STRING="DefaultEndpointsProtocol=https;AccountName=pocstoreflow;AccountKey=xxxx;EndpointSuffix=core.windows.net"
+AZURE_OPENAI_ENDPOINT="https://storeflow-openai.openai.azure.com/"
+AZURE_OPENAI_KEY="xxx"
+AZURE_OPENAI_DEPLOYMENT="storeflow-gpt4o"
