--- a/k8s/secrets/shared-app-secret.yaml
+++ b/k8s/secrets/shared-app-secret.yaml
@@ -15,3 +15,6 @@ stringData:
   OTEL_ENDPOINT: http://aspire-dashboard-internal:18889
   REDIS_URL: redis-stack-internal:6379
   AZURE_STORAGE_CONNECTION_STRING: DefaultEndpointsProtocol=https;AccountName=pocstoreflow;AccountKey=xxxx;EndpointSuffix=core.windows.net
+  AZURE_OPENAI_ENDPOINT: https://storeflow-openai.openai.azure.com/
+  AZURE_OPENAI_KEY: xxx
+  AZURE_OPENAI_DEPLOYMENT: storeflow-gpt4o
