--- a/Backend/StoreFlow.Ventas/StoreFlow.Ventas.Tests/StoreFlow.Ventas.Tests.csproj
+++ b/Backend/StoreFlow.Ventas/StoreFlow.Ventas.Tests/StoreFlow.Ventas.Tests.csproj
@@ -8,12 +8,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="coverlet.collector" Version="6.0.2" />
-        <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="9.0.4" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.4" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
-        <PackageReference Include="xunit" Version="2.9.2" />
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
+        <PackageReference Include="coverlet.collector" Version="6.0.2"/>
+        <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="9.0.4"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.4"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
+        <PackageReference Include="NSubstitute" Version="5.3.0"/>
+        <PackageReference Include="xunit" Version="2.9.2"/>
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2"/>
     </ItemGroup>
 
     <ItemGroup>
@@ -21,7 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\StoreFlow.Ventas.API\StoreFlow.Ventas.API.csproj" />
+        <ProjectReference Include="..\StoreFlow.Ventas.API\StoreFlow.Ventas.API.csproj"/>
     </ItemGroup>
 
 </Project>
